Refactor CoverageBuildAction